# survivor-network-ai

./: .gitignore  README.md  init.sh  setup.sh
backend/: .dockerignore  Dockerfile  deploy_agent.py  main.py  pyproject.toml  setup_data.py
backend/agent/: agent.py  multimedia_agent.py
backend/agent/tools/: extraction_tools.py  survivor_tools.py
backend/api/routes/: chat.py  graph.py  upload.py
backend/config/: __init__.py  extraction_config.py
backend/extractors/: __init__.py  base_extractor.py  image_extractor.py  text_extractor.py  video_extractor.py
backend/models/: chat.py  enums.py  graph.py  survivor.py
backend/services/: chat_service.py  gcs_service.py  gql_builder.py  graph_service.py  hybrid_search_service.py  spanner_graph_service.py  spanner_service.py
frontend/: .gcloudignore  Dockerfile  build_script.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  ChatPanel.tsx  SuggestedQueries.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts  useGraph.ts
frontend/src/services/: api.ts  chatService.ts  graphService.ts
frontend/src/stores/: chatStore.ts  graphStore.ts  uiStore.ts
frontend/src/styles/: animations.css  glassmorphism.css
frontend/src/theme/: spaceTheme.ts
frontend/src/types/: api.ts  chat.ts  graph.ts  survivor.ts
frontend/src/utils/: colors.ts  formatters.ts  graphLayout.ts
level_2/frontend/src/: App.css  App.tsx  index.css
(+23 files in other folders)
